added body-parser in order to be able to accept request data. also added an add route with a view that includes an input

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,3 +1,5 @@
-h1 Hello #{name}!
+ul 
+  each name in names.length ? names : 'nobody'
+    li= 'Hello ' + name + '!''
 
 p Hooray for serving files
