added the delete route. added objectID. The problems of finding/deleting documents was that I wasnt casting the strings to objectIDs. I had forgotten that this wasnt only for mongoose

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -1,7 +1,9 @@
 ul 
   each name in names
     li= 'Hello ' + name.name + '!' 
-      a(href='/#{name.id}') show
+      a(href='/#{name._id}') edit
+      a(href='/delete/#{name._id}') delete
+
 
 p Hooray for serving files 
 
