basic crud operations working. not truly restful, but if you guys want to see a much better crud app you can check out my node crud repo

--- a/public/views/edit.jade
+++ b/public/views/edit.jade
@@ -1,6 +1,6 @@
 p #{name.name}
 
-form(method='post' action='/edit/name.id')
+form(method='post' action='/#{name._id}')
   label new name
   input(type='text' name='name') 
   button(type='submit' value='submit') submit
